2005/9/5 -- released version 20050905_trunk

* don't create directories in "datadir" when running as a CGI
  -- niko
* the DYNAMIC-related files (.adr and .snmp) can now be located outside "datadir"
  by specifying the new configuration variable "dyndir" 
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* return '404 not found' when DYNAMIC updates fail
  -- niko, suggested by Marc Haber <mh+smokeping-users *zugschlus.de>
* make errors in DYNAMIC updates appear in the web server error log
  -- niko
* remove a quotemeta() call in Config::Grammar to allow metacharacters
  at the right side of '@define'
  -- niko, reported by Warrick FitzGerald <lists.smokeping.wfitzgerald *crtman.com>
* set LC_NUMERIC to C so that users who work with a locale like french that
  would use , as a decimal separator do not trip over failing regexp-matches
  (tobi)
* bugfix for CiscoRTTMonEchoICMP packetsize variable
  -- niko, from Sam Stickland <sam_ml *spacething.org>
* tune DS properties min/max/heartbeat instead of just complaing about
  them not matching (tobi)

2005/05/31 - publish rc5 (tobi)
* Officially include the tSmoke script from the contrib download directory.
  Note that this needs the new 'tmail' variable to be defined in the config file.
  -- niko, original script by Dan McGinn-Combs <d.mcginn-combs *mindspring.com>
* Perl 5.8.0 compatibility fix ("missing max for DS uptime")
  -- niko, reported by Steve Wickert and Kennedy Clark <hkclark *gmail.com>
* RRDtool 1.2.x compatibility fix ("unknown RRD version: 0003" on restart)
  -- niko, reported by Sam Stickland <sam_ml *spacething.org>

2005/05/11 - publish rc4 (tobi)
* Curl now has a new 'insecure_ssl' option for those not caring about CA paths
  -- niko, original patch by Marc Spitzer <mspitzer *gmail.com>
* document '@include' and its friends in smokeping_config in addition to 
  Config::Grammar -- niko, from Marc Haber (Debian bug #307955)