@@ -1,3 +1,5 @@
+2005/9/6 -- released version 20050906_trunk
+
 2005/9/5 -- released version 20050905_trunk
 
 * don't create directories in "datadir" when running as a CGI
